--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,91 +1,57 @@
-$icon-font-path: "/bower_components/sass-bootstrap/fonts/";
+$iconSpritePath: "../images/glyphicons-halflings.png";
+$iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";
 
-@import 'sass-bootstrap/lib/bootstrap';
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.container {
+  margin: 0 auto;
+  float: none;
+  background: #fff;
+  border: 10px solid #eee;
+  padding: 0 0px 30px 0;
 }
 
-/* Space out content a bit */
-body {
-    padding-top: 20px;
-    padding-bottom: 20px;
+header {
+  background: #eee;
+  padding: 15px 0 15px 0;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-    padding-left: 15px;
-    padding-right: 15px;
+fieldset{
+   background: #eee;
+   padding:10px 20px;
+   margin:0 0 15px 0;
 }
 
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
+form {
+  padding: 20px 15px 0 15px;
 }
 
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+textarea {
+  width: 96%;
 }
 
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
+.text-danger {
+  font-size: 0.8125em;
+  position: relative;
+  background: url('../images/ico-warning.png') 0 0 no-repeat;
+  padding: 2px 0 0 18px;
 }
 
-.container-narrow > hr {
-    margin: 30px 0;
+.btn-import {
+  margin: 0 0 10px 0;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
+.logo {
+  padding: 0 10px;
 }
 
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+.recipient{
+  width:50%;
 }
 
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
+.modal-dialog{
+  width:700px;
+  iframe{
+    width:650px;  
+  }
 }
 
-.marketing p + h4 {
-    margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
-
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
-    }
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
-    }
-}
