remove is&a logo

--- a/app/views/send-ecard.html
+++ b/app/views/send-ecard.html
@@ -11,7 +11,7 @@
 <section id="body" class="row-fluid">
     <div class="container col-12 col-lg-6 text-center">
         <header>
-            <img class="logo img-responsive" src="images/logo-iseabloom.png" alt="Is&a Bloom">
+            <!-- <img class="logo img-responsive" src="images/logo-iseabloom.png" alt="Is&a Bloom"> -->
             <h3>Carte de voeux 2014</h3>
         </header>
 
