--- a/app/views/index.html
+++ b/app/views/index.html
@@ -50,24 +50,23 @@
 
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/sass-bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- build:js scripts/plugins.js -->
-    <script src="scripts/mandrill.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js scripts/modules.js -->
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <!-- endbuild -->
+    <script src="bower_components/angular-route/angular-route.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/sendCtrl.js"></script>
     <!-- endbuild -->
+
+    <script src="bower_components/sass-bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- build:js({.tmp,app}) scripts/libs.js -->
+    <script src="scripts/mandrill.js"></script>
+    <!-- endbuild -->
+
+
 </body>
 
 </html>
