--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,7 @@
     <!-- endbuild -->
 </head>
 
-<body ng-app="greetingsApp">
+<body ng-app="mandrillApp">
     <!--[if lt IE 7]>
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
