--- a/app/views/partials/send-ecard.html
+++ b/app/views/partials/send-ecard.html
@@ -12,7 +12,7 @@
     <div class="container col-12 col-lg-6 text-center">
         <header>
             <!-- <img class="logo img-responsive" src="images/logo-iseabloom.png" alt="Is&a Bloom"> -->
-            <h1>Mandrill + AngularJS = ♥ </h1>
+            <h1>Mandrill + AngularJS = ♥</h1>
         </header>
 
         <form class="text-left" id="greetings-form" name="greetings" novalidate ng-submit="submitForm()">
@@ -20,22 +20,22 @@
                 <h4>Set your informations</h4>
                 <div class="control-group form-group">
                     <div class="controls">
-                        <input class="form-control" type="text" placeholder="Votre prénom" name="firstName" ng-model="user.firstName" ng-pattern="pattern1" required>
+                        <input class="form-control" type="text" placeholder="First Name" name="firstName" ng-model="user.firstName" ng-pattern="pattern1" required>
                         <span class="text-danger" ng-show='greetings.firstName.$error.pattern'>Invalide : caractères alphabétiques uniquement</span>
                         <span class="text-danger" ng-show='greetings.firstName.$dirty && greetings.firstName.$error.required'>Champs obligatoire</span>
                     </div>
                 </div>
                 <div class="control-group form-group">
                     <div class="controls">
-                        <input class="form-control" type="text" placeholder="Votre nom" name="lastName" ng-model="user.lastName" ng-pattern="pattern1" required>
+                        <input class="form-control" type="text" placeholder="Last Name" name="lastName" ng-model="user.lastName" ng-pattern="pattern1" required>
                         <span class="text-danger" ng-show='greetings.lastName.$error.pattern'>Invalide : caractères alphabétiques uniquement</span>
                         <span class="text-danger" ng-show='greetings.lastName.$dirty && greetings.lastName.$error.required'>Champs obligatoire</span>
                     </div>
                 </div>
                 <div class="control-group form-group">
                     <div class="controls">
-                        <input class="form-control" type="email" placeholder="Votre adresse email" name="email" ng-model="user.email" required>
-                        <span class="text-danger" ng-show='greetings.email.$dirty && greetings.email.$invalid && !greetings.email.$error.required'>Invalide : verifiez le format de votre adresse email</span>
+                        <input class="form-control" type="email" placeholder="Email" name="email" ng-model="user.email" required>
+                        <span class="text-danger" ng-show='greetings.email.$dirty && greetings.email.$invalid && !greetings.email.$error.required'>Error : your email is not correct</span>
                         <span class="text-danger" ng-show='greetings.email.$dirty && greetings.email.$error.required'>Champs obligatoire</span>
                     </div>
                 </div>
@@ -59,11 +59,11 @@
                 <div class="control-group form-group">
                     <div class="controls form-inline">
                         <input class="recipient form-control" type="email" placeholder="Adresse email d'un destinataire" name="recipient" ng-model="recipient.email">
-                        <button type="button" class="btn btn-primary" ng-click="addRecipient($index)" ng-disabled="greetings.recipient.$invalid">Ajouter</button>
+                        <button type="button" class="btn btn-primary" ng-click="addRecipient($index)" ng-disabled="greetings.recipient.$invalid">Add recipient</button>
                     </div>
                     <div class="checkbox" ng-show="greetings.email.$valid">
                         <label>
-                            <input type="checkbox" ng-model="copyEmail" ng-change="receiveCopy()" ng-disabled="greetings.email.$invalid">Recevoir une copie
+                            <input type="checkbox" ng-model="copyEmail" ng-change="receiveCopy()" ng-disabled="greetings.email.$invalid">Get a copy
                         </label>
                     </div>
                     <!--
@@ -81,23 +81,23 @@
                 <h4>Edit your email</h4>
                 <div class="control-group form-group">
                     <div class="controls">
-                      <select class="form-control" ng-init="getEmailTemplates()" ng-model="emailTemplate" ng-options="template for template in emailTemplates" required></select>
+                        <select class="form-control" ng-init="getEmailTemplates()" ng-model="emailTemplate" ng-options="template for template in emailTemplates" required></select>
                     </div>
                 </div>
                 <div class="control-group form-group">
                     <div class="controls">
-                        <input class="form-control" type="text" placeholder="Objet de l'email de notification" name="mailSubject" ng-model="mailSubject" ng-pattern="pattern2" required>
-                        <span class="text-danger" ng-show='greetings.mailSubject.$error.pattern'>Invalide: caractères alphanumériques uniquement</span>
-                        <span class="text-danger" ng-show='greetings.mailSubject.$dirty && greetings.mailSubject.$error.required'>Champs obligatoire</span>
+                        <input class="form-control" type="text" placeholder="Email Object" name="mailSubject" ng-model="mailSubject" ng-pattern="pattern2" required>
+                        <span class="text-danger" ng-show='greetings.mailSubject.$error.pattern'>Error : letters and digits only</span>
+                        <span class="text-danger" ng-show='greetings.mailSubject.$dirty && greetings.mailSubject.$error.required'>Mandatory field</span>
                     </div>
                 </div>
 
                 <div class="control-group form-group">
-                    <textarea class="form-control" type="text" rows="5" placeholder="Message personnalisé de l'email de notification" name="mailContent" ng-model="mailContent" required></textarea>
-                    <span class="text-danger" ng-show='greetings.mailContent.$dirty && greetings.mailContent.$error.required'>Champs obligatoire</span>
+                    <textarea class="form-control" type="text" rows="5" placeholder="Mail Content" name="mailContent" ng-model="mailContent" required></textarea>
+                    <span class="text-danger" ng-show='greetings.mailContent.$dirty && greetings.mailContent.$error.required'>Mandatory field</span>
                 </div>
 
-                <button class="btn btn-primary" data-toggle="modal" data-target="#previewEmail" ng-disabled="greetings.mailContent.$invalid || greetings.mailSubject.$invalid" ng-click="previewEmail()">Aperçu</a>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#previewEmail" ng-disabled="greetings.mailContent.$invalid || greetings.mailSubject.$invalid" ng-click="previewEmail()">Preview</a>
 
             </fieldset>
 
@@ -112,10 +112,10 @@
             </fieldset>
             -->
 
-            <p class="required">* champs obligatoires</p>
+            <p class="required">* mandatory fields</p>
             <!--<button id="send-form" type="submit" class="btn btn-success btn-lg">Test Envoyer</button>-->
 
-            <button id="send-form" type="submit" class="btn btn-success btn-lg pull-right" ng-disabled="greetings.$invalid">Envoyer</button>
+            <button id="send-form" type="submit" class="btn btn-success btn-lg pull-right" ng-disabled="greetings.$invalid">Send</button>
             <!--<a id="view-ecard" href="#" class="btn btn-primary btn-lg">Aperçu</a> </div>-->
 
 
