--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,12 +9,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <base href="/">
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap-theme.min.css">
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -31,7 +32,14 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-view=""></div>
+    <section id="body" class="row-fluid">
+        <div class="container col-12 col-lg-6">
+            <header class="clearfix" ui-view="header">
+
+            </header>
+            <div id="wrapper" ui-view="container"></div>
+        </div>
+    </section>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -48,24 +56,30 @@
     }(document, 'script'));
     </script>
 
+    <!-- build:js({.tmp,app}) scripts/libs.js -->
     <script src="bower_components/jquery/jquery.js"></script>
+    <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/sendCtrl.js"></script>
-    <!-- endbuild -->
-
-    <script src="bower_components/sass-bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- build:js({.tmp,app}) scripts/libs.js -->
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="https://cdn.firebase.com/js/simple-login/1.6.1/firebase-simple-login.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.min.js"></script>
+    <script src="bower_components/spin.js/spin.js"></script>
+    <script src="bower_components/angular-spinner/angular-spinner.js"></script>
     <script src="scripts/mandrill.js"></script>
     <!-- endbuild -->
 
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/headerCtrl.js"></script>
+    <script src="scripts/controllers/sendCtrl.js"></script>
+    <script src="scripts/controllers/clientsCtrl.js"></script>
+    <script src="scripts/controllers/loginCtrl.js"></script>
+    <!-- endbuild -->
+
+    <script src="bower_components/sass-bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
