--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -57,21 +58,22 @@
     }(document, 'script'));
     </script>
 
+
     <!-- build:js({.tmp,app}) scripts/libs.js -->
     <script src="bower_components/jquery/jquery.js"></script>
-    <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="scripts/mandrill.js"></script>
+    <!-- endbuild -->
+    <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
     <script src="https://cdn.firebase.com/js/simple-login/1.6.1/firebase-simple-login.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.min.js"></script>
-    <script src="bower_components/angular-spinner/angular-spinner.js"></script>
-    <script src="scripts/mandrill.js"></script>
-    <script src="bower_components/spin.js/spin.js"></script>
-    <!-- endbuild -->
+
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
